# diffinator

./: README.md  pyproject.toml  requirements.txt
docs/: example-report-pytorch.md  example-report.md
gguf-py/: pyproject.toml
src/: diffinator.py
src/diffinator/: __init__.py  diffinator.py
src/diffinator/configs/: defaults.yaml  llamacpp.yaml  pytorch.yaml
